src/app/shared/components/file-viewer/file-viewer.component.scss
.modal-title {
    word-wrap: break-word;
    font-size: 0.7rem;
}

.modal-body {
    height: 70vh;
}

.ace {
    border: 1px solid #e3e3e3;
}

ace::ng-deep {
    .lineMarker {
        position: absolute;
        background: rgba(176, 255, 176, 0.3);
        z-index: 20;
    }

    .wordMarker {
        position: absolute;
        background: rgba(255, 255, 0, 0.5);
        z-index: 21;
    }
}

:host(.fullscreen) {
    .modal-body {
        height: 100%;
        max-height: none;
    }

    ::ng-deep {
        .modal-dialog {
            width: 100%;
        }

        .modal-content {
            display: flex;
            flex-direction: column;
            border-radius: 0;
        }

        .modal-dialog, .modal-content-wrapper, .modal-content {
            height: 100%;
        }

        .modal {
            padding: 0;
        }
    }
}

